discussion/kv_engine/168904/168904_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

toybuild: prototype magma keyMayExist

Change-Id: Idb5e3c9f5849e1dd194b9c6a65a66ca729558168

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2022-01-18 10:45:16.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-18 11:00:06.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14871/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:154:19: error: no member named "KeyMayExist" in "magma::Magma" [clang-diagnostic-error]
    return magma->KeyMayExist(kvID, key);
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14871/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:154:19:
error: no member named "KeyMayExist" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14871/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42875/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc(154): error C2039: "KeyMayExist": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42875/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36324/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:154:19:
error: no member named "KeyMayExist" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36324/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4515/ : FAILURE

Compile error at [2022-01-18T10:56:09.879Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:154:19:
error: no member named "KeyMayExist" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4515/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16832/ : FAILURE

Compile error at [2022-01-18T10:54:45.613Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:154:19:
error: ?class magma::Magma? has no member named ?KeyMayExist?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16832/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16539/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15679/ : FAILURE

Compile error at [2022-01-18T10:54:05.499Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:154:19:
error: no member named "KeyMayExist" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15679/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24956/ : FAILURE

Compile error at [2022-01-18T10:54:52.116Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:154:19:
error: no member named "KeyMayExist" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24956/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4573/ : FAILURE

Compile error at [2022-01-18T10:57:45.243Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:154:19:
error: ?class magma::Magma? has no member named ?KeyMayExist?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4573/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17623/ : FAILURE

Compile error at [2022-01-18T10:57:05.617Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:154:19:
error: no member named "KeyMayExist" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17623/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13715/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2022-02-08 09:26:12.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2022-02-08 09:26:27.000000000
Message: 
Restored
----------------------------------------------------------------------------------------------------------------------
